src/objects/Apttus_Config2__ApplicationSetting__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_Config2__CustomSettingName__c</fullName>
        <description>API Name of the Custom Setting which contains the setting associated with this record</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>API Name of the Custom Setting which contains the setting associated with this record</inlineHelpText>
        <label>Custom Setting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomSettingRecordName__c</fullName>
        <description>The record name of the custom setting (Eg System Properties)</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The record name of the custom setting (Eg System Properties)</inlineHelpText>
        <label>Custom Setting Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultId__c</fullName>
        <description>Default Identifier of the Application Setting</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Default Identifier of the Application Setting</inlineHelpText>
        <label>DefaultId</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultValue__c</fullName>
        <description>Field to specify default value for this setting</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field to specify default value for this setting</inlineHelpText>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExternalId__c</fullName>
        <description>External Id pointing to the original ApplicationSetting__c record</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>External Id pointing to the original ApplicationSetting__c record</inlineHelpText>
        <label>ExternalId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ExternalSettingGroupId__c</fullName>
        <description>External Id pointing to the SettingGroup__c original parent record</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>External Id pointing to the SettingGroup__c original parent record</inlineHelpText>
        <label>ExternalSettingGroupId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldLabel__c</fullName>
        <description>The label of the application setting</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The label of the application setting</inlineHelpText>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FieldName__c</fullName>
        <description>Field to contain the Field Name from the associated Custom Setting</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field to contain the Field Name from the associated Custom Setting</inlineHelpText>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HelpLink__c</fullName>
        <description>The URL accompanying the custom setting for more information</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The URL accompanying the custom setting for more information</inlineHelpText>
        <label>Help Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HelpText__c</fullName>
        <description>The help text accompanying the custom setting</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The help text accompanying the custom setting</inlineHelpText>
        <label>Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ObjectNameForPicklistOptions__c</fullName>
        <description>Field to specify API Name of an object, whose fields need to be displayed as available options if the setting is a picklist</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field to specify API Name of an object, whose fields need to be displayed as available options if the setting is a picklist</inlineHelpText>
        <label>Object Name For Picklist Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RecordKey__c</fullName>
        <description>Field to contain the Record Key used to identify record(s) in the associated Custom Setting</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field to contain the Record Key used to identify record(s) in the associated Custom Setting</inlineHelpText>
        <label>Record Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StaticPicklistOptions__c</fullName>
        <description>Field to contain a comma-separated list of available options if the setting is a picklist</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Field to contain a comma-separated list of available options if the setting is a picklist</inlineHelpText>
        <label>Static Picklist Options</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__URL__c</fullName>
        <description>The URL accompanying the custom setting for more information</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The URL accompanying the custom setting for more information</inlineHelpText>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>